examples/test/testpolicy4214.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4214
  namespace: namespace26
spec:
  podSelector:
    matchLabels:
      key8: value34
      key29: value42
      key40: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value10
      podSelector:
        matchLabels:
          key23: value1
          key40: value15
          key34: value19
